# pawnai-recorder

./: .gitignore  .pawnai-recorder.yml.example  README.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
docs/: README.md
pawnai_recorder/: __init__.py  __main__.py
pawnai_recorder/cli/: __init__.py  commands.py  utils.py
pawnai_recorder/core/: __init__.py  config.py  log.py  processing.py  recording.py  s3_upload.py  storage.py
pawnai_recorder/utils/: __init__.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_utils.py
