[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pawnai-recorder"
version = "1.0.0"
description = "Professional audio recording and management CLI"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "OpenBrain Team", email = "contact@openbrain.dev"}
]
license = {text = "MIT"}
keywords = ["audio", "recording", "pyaudio", "sounddevice", "level-meter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyaudio>=0.2.14",
    "loguru>=0.7.2",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "numpy>=1.21.0",
    "soundfile>=0.12.1",
    "scipy>=1.7.0",
    "pydub>=0.25.1",
    "boto3>=1.34.0",
    "PyYAML>=6.0.1",
]

[project.urls]
Homepage = "https://github.com/pawnai/pawnai-recorder"
Documentation = "https://github.com/pawnai/pawnai-recorder/blob/main/README.md"
Repository = "https://github.com/pawnai/pawnai-recorder.git"
Issues = "https://github.com/pawnai/pawnai-recorder/issues"

[project.scripts]
pawnai-recorder = "pawnai_recorder.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.setuptools]
packages = ["pawnai_recorder", "pawnai_recorder.cli", "pawnai_recorder.core", "pawnai_recorder.utils"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=pawnai_recorder --cov-report=html --cov-report=term-missing"
